add notes when user click contribute button

--- a/views/charity/charity.ejs
+++ b/views/charity/charity.ejs
@@ -196,6 +196,8 @@
                     <div id = "paymentAmountForm" class="form-row"  style="display:none;">
                         <label>Amount</label>
                         <input id="paymentAmount" type="text" maxlength="20" autocomplete="off" class="required" />
+                        <label>Notes</label>
+                        <input id="Notes" type="text" maxlength="20" autocomplete="off" class="required" />
                         <button id = "confirm" type="submit" name="submit-button" onClick="enableCheckout()">Confirm</button>
                     </div>
 
