--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -17,6 +17,7 @@
          if(activeMenu == "SignIn") menuClass[3] = "active";
          if(activeMenu == "SignUp") menuClass[4] = "active";
          if(activeMenu == "Charities") menuClass[5] = "active";
+         if(activeMenu == "Enquiry") menuClass[6] = "active";
 
         %>
         <div class="collapse navbar-collapse" id="exampleNavbarCollapse">
@@ -25,6 +26,7 @@
                 <li class="<%=menuClass[5]%>"><a href="/charities/listCharities">Charities</a></li>
                 <li class="<%=menuClass[1]%>"><a href="/aboutus">About Us</a></li>
                 <li class="<%=menuClass[2]%>"><a href="/contactus">Contact Us</a></li>
+                <li class="<%=menuClass[6]%>"><a href="/Enquiry">Donation Enquiry</a></li>
             </ul>
             <form class="nav navbar-nav navbar-form" action="/charities/searchCharities" method="get" role="search">
                 <div class="input-group">
