--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -26,7 +26,7 @@
                 <li class="<%=menuClass[5]%>"><a href="/charities/listCharities">Charities</a></li>
                 <li class="<%=menuClass[1]%>"><a href="/aboutus">About Us</a></li>
                 <li class="<%=menuClass[2]%>"><a href="/contactus">Contact Us</a></li>
-                <li class="<%=menuClass[6]%>"><a href="/Enquiry">Donation Enquiry</a></li>
+                <li class="<%=menuClass[6]%>"><a href="/search">Donation Tracking</a></li>
             </ul>
             <form class="nav navbar-nav navbar-form" action="/charities/searchCharities" method="get" role="search">
                 <div class="input-group">
