adding UUID as confirmation Code and change jqgrid reference to bower lib

--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -78,6 +78,96 @@ function enableCheckout() {
 </script>
 
 
+<form id="form" action="/payment/stripePayment" method="POST" style="display:none;">
+    <input id="amount"  name="amount" value="0">
+    <input id="receipientId"  name="receipientId" value="0">
+    <input id="stripeCustomerId"  name="stripeCustomerId" value="0">
+
+</form>
+
+
+<script>
+    function initializeValue() {
+        document.getElementById("contribute_button").style.display="block";
+        //alert("Please confirm you will pay the following amount: "+ jQuery("#paymentAmount").val());
+        jQuery("#amount").val(jQuery("#paymentAmount").val());
+
+        //alert("Set amount: "+ jQuery("#amount").val());
+
+        //alert( "amount:" +jQuery("#amount").val());
+    }
+
+</script>
+
+
+
+<script>
+
+    $('#customButton').click(function(){
+        <%if ( undefined==user || user.provider=='recipient' ) {%>
+        window.location.href='/login/signin';
+        <%} else {%>
+        //get userId from session
+        //query DB to find strip ID
+        //jQuery.get( url [, data ] [, success ] [, dataType ] )
+        existingUserById = '/payment/stripePayment/queryUser/';
+
+        var stripId;
+
+
+        //Inside a function a special variable "arguments" is always available. It's similar to an array in that it has a length property, but it lacks the built-in methods of an array.
+        $.get(existingUserById, { userId: <%=user.userId%> },function(result) {
+            alert("<%=user.userId%>");
+            if (!result || result == "failed") {
+                alert("failed to get results");
+                return;
+            }
+            //alert("currentResults:"+ result);
+            stripeCustomerId = result;
+            console.dir("stripeCustomerId(charity.ejs): "+ stripeCustomerId);
+            if(stripeCustomerId!=null)
+                alert("current stripCustomerId:"+ stripeCustomerId);
+            else
+                alert("current stripCustomerId: null");
+            //need to pass thru charityId  as well
+
+            //if stripCustomerId not null, then post to the payment page automatically
+            if($.trim(stripeCustomerId)) {
+                jQuery("#stripeCustomerId").val(stripeCustomerId);
+
+                $('form').submit();
+
+                alert( "payment successfully made ");
+                return;
+            }
+
+            //else of stripCustomerId is null, need to pop up Stripe checkout widget to enter credit card info
+            var token = function(res){
+                var $input = $('<input type=hidden name=stripeToken />').val(res.id);
+                $('form').append($input).submit();
+            };
+            var payAmount=  jQuery("#paymentAmount").val();
+
+            StripeCheckout.open({
+                key:         'pk_test_iJPmMQMGarAHRE7oUcM5iBxO',
+                address:     true,
+                amount:      payAmount*100,//scale in cents instead of dollar
+                currency:    'usd',
+                name:        'User:'+ '<%=user.firstName%>',
+                description: 'Will Give Checkout',
+                panelLabel:  'Checkout',
+                token:       token
+            });
+
+            return false;
+        });
+        <% } %>
+
+    })
+
+    //direct charge on the account without pop up payment checkout wizard
+</script>
+
 <!--
     // v1 style widget
     jQuery('#customButton').on('click', function (e) {
