Add terms of service and privacy policy

--- a/views/login/signup.ejs
+++ b/views/login/signup.ejs
@@ -72,7 +72,7 @@
 
 <div class="container" style="padding-top: 2%">
     <div class="text-center" >
-        By clicking “Sign Up” , you agree to WillGive's Terms and Conditions and Privacy Policy.<br><br>
+        By clicking “Sign Up” , you agree to WillGive's <a href='../terms'>Terms and Conditions</a> and <a href='../privacy'>Privacy Policy</a>.<br><br>
         Already have an account? <a href="/login/signin">Sign In</a>
     </div>
 </div>
