--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -6,11 +6,10 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">WillGive</a>
+            </button>            
         </div>
         <% 
-         var menuClass = new Array("#", "#","#","#","#","#");
+         var menuClass = new Array("#", "#","#","#","#","#", "#", "#", "#");
          if(activeMenu == "Home") menuClass[0] = "active";
          if(activeMenu == "About") menuClass[1] = "active";
          if(activeMenu == "Contact") menuClass[2] = "active";
@@ -18,15 +17,19 @@
          if(activeMenu == "SignUp") menuClass[4] = "active";
          if(activeMenu == "Charities") menuClass[5] = "active";
          if(activeMenu == "Enquiry") menuClass[6] = "active";
+		 if(activeMenu == "Terms") menuClass[7] = "active";
+		 if(activeMenu == "Privacy") menuClass[8] = "active";
 
         %>
         <div class="collapse navbar-collapse" id="exampleNavbarCollapse">
             <ul class="nav navbar-nav">
-                <li class="<%=menuClass[0]%>"><a href="/">Home</a></li>
+                <li class="<%=menuClass[0]%>"><a href="/">WillGive</a></li>
                 <li class="<%=menuClass[5]%>"><a href="/charities/listCharities">Charities</a></li>
                 <li class="<%=menuClass[1]%>"><a href="/aboutus">About Us</a></li>
                 <li class="<%=menuClass[2]%>"><a href="/contactus">Contact Us</a></li>
                 <li class="<%=menuClass[6]%>"><a href="/search">Donation Tracking</a></li>
+				<li class="<%=menuClass[7]%>"><a href="/terms">Terms of Service</a></li>
+				<li class="<%=menuClass[8]%>"><a href="/Privacy">Privacy</a></li>
             </ul>
             <form class="nav navbar-nav navbar-form" action="/charities/searchCharities" method="get" role="search">
                 <div class="input-group">
