A few minor bug fixes
1.  /search page's last page URL
2.  My contribution page should show confirmation code instead of
transaction id. Transaction id should be internal only.
3. Donation Tracking should mention Confirmation code instead of
transaction id too.
4. userContribution page,  in Jason, it is called recipientId.

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -31,12 +31,12 @@
     <div class="col-md-7 columns">
 
 
-        <h3>Please enter the transaction ID to query charity donation</h3>
+        <h3>Please enter a confirmation code to query charity donation</h3>
         <p>We take the charity donation security and transparency very seriously. We've made all the donation transaction public and easy to track.
             WillGive wants only the best for you, so we use industry-leading Secure Sockets Layer (SSL) technology to keep personal information as secure as possible.
             Built in Stripe payment also helps protect your information by only working with partners that provide a secure and safe environment for credit card donations</em>.</p>
         <div>
-            <label>transactionId</label>
+            <label>Confirmation Code</label>
             <input id="transactionId" type="text" maxlength="100" autocomplete="off" class="required" />
         </div>
         <button id="contribute_button"  class="btn btn-block btn-lg btn-primary" style="display:block;" onClick="refresh()">
