--- a/views/layout/navbar.ejs
+++ b/views/layout/navbar.ejs
@@ -1,3 +1,4 @@
+<meta HTTP-EQUIV="expires" CONTENT="Wed, 01 Jan 1997 01:01:01 GMT">
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
