--- a/views/search.ejs
+++ b/views/search.ejs
@@ -6,53 +6,56 @@
 
     <title>WillGive</title>
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/assets/css/simple-sidebar.css" >
-    <link rel="stylesheet" href="/assets/css/customJqueryValidation.css">
-
-    <link rel="stylesheet" type="text/css" href="/assets/css/ui.jqgrid.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/ui.multiselect.css">
 
 
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="/jqgrid/css/ui.jqgrid.css">
 
 
-    <script src="/jquery/dist/jquery.js"></script>
-    <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="/jquery-validation/dist/jquery.validate.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+     <script src="/jquery/dist/jquery.js"></script>
 
 
+    <script src="/jqgrid/js/minified/jquery.jqGrid.min.js" type="text/javascript"></script>
+
+    <link rel="stylesheet" type="text/css" media="screen" href="http://trirand.com/blog/jqgrid/themes/redmond/jquery-ui-custom.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="http://trirand.com/blog/jqgrid/themes/ui.jqgrid.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="http://trirand.com/blog/jqgrid/themes/ui.multiselect.css" />
+
+
+
+
+<!--
     <script src="/assets/js/jqgridmain.js" type="text/javascript"></script>
     <script src="/assets/js/jqgridTablednd.js" type="text/javascript"></script>
     <script src="/assets/js/jqgridContextmenu.js" type="text/javascript"></script>
 
+
     <script src="/assets/js/jquery.simplePagination.js"></script>
+
+      -->
 
     <%activeMenu = "Contact"%>
     <%include layout/navbar.ejs%>
 </head>
 <body>
 <div class="container">
-    <div class="col-md-7 columns">
+    <div class="col-md-7 columns" >
 
 
-        <h3>please enter the transaction ID to query charity donation</h3>
+        <h3>please enter the ConfirmationCode to query charity donation</h3>
         <p>We take the charity donation security very seriously. We made all the donation transaction public and easy to track.
             WillGive wants only the best for you, so we use industry-leading Secure Sockets Layer (SSL) technology to keep personal information as secure as possible.
             Built in Stripe payment also helps protect your information by only working with partners that provide a secure and safe environment for credit card donations</em>.</p>
-        <div>
-            <label>transactionId</label>
+        <div  class="container">
+            <label>Confirmation Code</label>
             <input id="transactionId" type="text" maxlength="100" autocomplete="off" class="required" />
         </div>
         <button id="contribute_button"  class="btn btn-block btn-lg btn-primary" style="display:block;" onClick="refresh()">
             Search
         </button>
 
-        <div class="container" >
+        <div >
 
-            <!--  <button id="getAllSpots">查询景点</button>-->
+            <!--  <button id="getAllSpots">查询景点</button>   -->
             <table id="listResult"></table>
             <table id="grid"></table>
             <div id="pagerResults"></div>
@@ -106,7 +109,7 @@
                             viewrecords: true,
                             sortorder: "desc",
                             caption: "donation listings",
-                            width: 770,
+                            width: 1000,
                             height: "100%"
                         });
 
