--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,30 +1,47 @@
 ﻿
 ﻿<footer>
+    <style>
+        ul {
+            display: block;
+            list-style-type: none;
 
-﻿<style>
-    * {
-        margin: 0;
-    }
-    html, body {
-        height: 100%;
+        }
+        a{
+            color : black;
 
-    }
-
-</style>
-
+        }
+    </style>
     <hr/>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
-                <p>CopyRight© 2015 WillGive</p>
+            <div class="col-md-4">
+
+             <ul>
+                 <li><a href="/">WillGive</a></li>
+
+                 <li><a href="/aboutus">About Us</a></li>
+                 <li><a href="/contactus">Contact Us</a></li>
+                 <li><a href="/Privacy">Privacy</a></li>
+                 <li><a href="/terms">Terms of Service</a></li>
+             </ul>
             </div>
-            <div class="col-md-6">
-                <ul class="nav nav-pills pull-right">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="/aboutus">About Us</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="/contactus">Contact Us</a></li>
+
+            <div class="col-md-4">
+
+                <ul>
+                    <li><a href="/charities/listCharities">Charities</a></li>
+                    <li><a href="/recipient/signup">Charity Register</a></li>
+                    <li><a href="/charities/listCharities">Charity Sponsor</a></li>
+
+                </ul>
+
+            </div>
+
+            <div class="col-md-4">
+                <ul>
+                    <li><a href="#">Campaigns</a></li>
+
+
                 </ul>
             </div>
         </div>
